@@ -149,6 +149,27 @@ __PACKAGE__->set_primary_key('id_seq_component');
 
 __PACKAGE__->add_unique_constraint('unq_seq_compon_d', ['digest']);
 
+=head2 C<unq_seq_compos_rp>
+
+=over 4
+
+=item * L</id_run>
+
+=item * L</position>
+
+=item * L</tag_index>
+
+=item * L</subset>
+
+=back
+
+=cut
+
+__PACKAGE__->add_unique_constraint(
+  'unq_seq_compos_rp',
+  ['id_run', 'position', 'tag_index', 'subset'],
+);
+
 =head1 RELATIONS
 
 =head2 seq_component_compositions
@@ -167,8 +188,8 @@ __PACKAGE__->has_many(
 );
 
 
-# Created by DBIx::Class::Schema::Loader v0.07043 @ 2015-09-09 16:20:06
-# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:wU4jPf38RcjAPVF+Boz3CQ
+# Created by DBIx::Class::Schema::Loader v0.07047 @ 2017-08-09 17:13:54
+# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:sjyVxeJ8u3jt8JvjEiP1uw
 
 
 # You can replace this text with custom code or comments, and it will be preserved on regeneration
